docs(claude): enhance CLAUDE.md with comprehensive development best practices
- Added detailed project structure documentation with ASCII diagrams
- Expanded architecture section with layered architecture visualization
- Added comprehensive coding standards and naming conventions
- Included SOLID principles and clean code practices
- Added extensive testing strategy with AAA pattern examples
- Documented security best practices (input validation, API security, data protection)
- Added performance optimization guidelines (caching, async processing, connection pooling)
- Enhanced API documentation with versioning and error handling tables
- Added Git workflow and contribution guidelines
- Included commit message conventions (Conventional Commits)
- Added code review checklist and PR template
- Documented common development tasks and debugging tips
- Added Javadoc standards and documentation guidelines
- Included troubleshooting guide and useful commands reference
- Added version history section

This comprehensive update transforms CLAUDE.md into a complete developer
guide that covers architecture, best practices, testing, security,
performance, and workflow standards for the project.